@@ -37,7 +37,9 @@ import org.restlet.Request;
 import org.restlet.data.ChallengeRequest;
 import org.restlet.data.ChallengeResponse;
 import org.restlet.data.ChallengeScheme;
+import org.restlet.data.Digest;
 import org.restlet.data.Method;
+import org.restlet.data.Reference;
 import org.restlet.engine.header.ChallengeWriter;
 import org.restlet.engine.header.Header;
 import org.restlet.engine.header.HeaderConstants;
@@ -117,14 +119,32 @@ public class AuthenticationTestCase extends RestletTestCase {
      * @throws IOException
      */
     public void testParsingDigest() throws IOException {
-        String authorization1 = "Digest username=\"admin\", nonce=\"MTE3NzEwMzIwMjg0Mjo2NzFjODQyMjAyOWRlNWQ1YjFjNmEzYzJmOWRlZmE2Mw==\", uri=\"/protected/asdass\", response=\"a891ebedebb2046b83a9b7540f4e9554\", cnonce=\"MTE3NzEwMzIwMjkwMDoxNmMzODFiYzRjNWRjMmMyOTVkMWFhNDdkMTQ4OGFlMw==\", qop=auth, nc=00000001";
+        ChallengeResponse cres1 = new ChallengeResponse(
+                ChallengeScheme.HTTP_DIGEST,
+                null,
+                "admin",
+                "12345".toCharArray(),
+                Digest.ALGORITHM_NONE,
+                null,
+                "qop",
+                new Reference("/protected/asdass"),
+                null,
+                null,
+                "MTE3NzEwMzIwMjkwMDoxNmMzODFiYzRjNWRjMmMyOTVkMWFhNDdkMTQ4OGFlMw==",
+                "MTE3NzEwMzIwMjkwMDoxNmMzODFiYzRjNWRjMmMyOTVkMWFhNDdkMTQ4OGFlMw==",
+                1, 0L);
+
+        Request request = new Request(Method.GET,
+                "http://remote.com/protected/asdass");
+        String authorization1 = AuthenticatorUtils.formatResponse(cres1,
+                request, null);
         String authenticate1 = "Digest realm=realm, domain=\"/protected/ /alsoProtected/\", qop=auth, algorithm=MD5, nonce=\"MTE3NzEwMzIwMjg0Mjo2NzFjODQyMjAyOWRlNWQ1YjFjNmEzYzJmOWRlZmE2Mw==\"";
 
         ChallengeResponse cres = AuthenticatorUtils.parseResponse(null,
                 authorization1, null);
         cres.setRawValue(null);
         assertEquals(authorization1,
-                AuthenticatorUtils.formatResponse(cres, null, null));
+                AuthenticatorUtils.formatResponse(cres, request, null));
 
         List<ChallengeRequest> creq = AuthenticatorUtils.parseRequest(null,
                 authenticate1, null);
